# sequoia

./: .gitignore  README.md
Source/: CMakeLists.txt  MainPage.dox  makefile
Source/Core/DataStructures/: DataStructuresTypeTraits.hpp  LinearlyPartitionedData.hpp  PartitionedData.hpp  PartitionedDataDetails.hpp  StaticLinearlyPartitionedSequence.hpp  StaticStack.hpp
Source/Core/Meta/: Concepts.hpp  TypeTraits.hpp  Utilities.hpp
Source/Core/Ownership/: DataPool.hpp  HandlerTraits.hpp  Handlers.hpp
Source/Core/Utilities/: IteratorDetails.hpp  ProtectiveWrapper.hpp  UniformWrapper.hpp
Source/Experimental/: Probability.hpp
Source/Formatting/: Indent.cpp  Indent.hpp
Source/Maths/Graph/: Connectivity.hpp  DynamicGraphImpl.hpp  DynamicGraphTraversalDetails.hpp  Graph.hpp  GraphDetails.hpp  GraphTraversalFunctions.hpp  HeterogeneousNodeStorage.hpp  NodeStorage.hpp  StaticGraph.hpp  StaticNodeStorage.hpp
Source/Maths/Sequences/: LinearSequence.hpp
Source/Maths/Statistics/: StatisticalAlgorithms.hpp
Source/Parsing/: CommandLineArguments.cpp  CommandLineArguments.hpp
Source/PlatformSpecific/: Preprocessor.cpp  Preprocessor.hpp
Source/Runtime/: Factory.hpp
Source/TestFramework/: Advice.cpp  Advice.hpp  AllocationCheckers.hpp  AllocationCheckersDetails.cpp  AllocationCheckersDetails.hpp  AllocationCheckersTraits.hpp  AllocationTestUtilities.hpp  ConcreteEqualityCheckers.hpp  ConcreteEquivalenceCheckers.hpp  ConcreteTypeCheckers.hpp  CoreInfrastructure.hpp  FileEditors.cpp  FileEditors.hpp  FileSystem.cpp  FileSystem.hpp  Format.cpp  Format.hpp  FreeCheckers.hpp  FreeTestCore.cpp  FreeTestCore.hpp  FuzzyTestCore.hpp  MoveOnlyAllocationCheckers.hpp  MoveOnlyAllocationCheckersDetails.hpp  MoveOnlyAllocationTestCore.hpp  MoveOnlyCheckers.hpp  MoveOnlyCheckersDetails.hpp  MoveOnlyTestCore.hpp  Output.cpp  Output.hpp  PerformanceTestCore.cpp  PerformanceTestCore.hpp  Preprocessor.hpp  RegularAllocationCheckers.hpp  RegularAllocationCheckersDetails.hpp  RegularAllocationTestCore.hpp  RegularCheckers.hpp  RegularCheckersDetails.hpp  RegularTestCore.hpp  SemanticsCheckersDetails.cpp  SemanticsCheckersDetails.hpp  (+8 more)
Source/sequoia/: CMakeLists.txt
Source/sequoia/Algorithms/: Algorithms.hpp
Source/sequoia/Core/Concurrency/: ConcurrencyModels.hpp
Source/sequoia/Core/ContainerUtilities/: ArrayUtilities.hpp  AssignmentUtilities.hpp  Iterator.hpp  IteratorDetails.hpp
Source/sequoia/Core/DataStructures/: DataStructuresTypeTraits.hpp  MemOrderedTuple.hpp  PartitionedData.hpp  PartitionedDataDetails.hpp  StaticLinearlyPartitionedSequence.hpp  StaticPriorityQueue.hpp  StaticQueue.hpp  StaticStack.hpp
Source/sequoia/Core/Logic/: Bitmask.hpp
Source/sequoia/Core/Meta/: Concepts.hpp  Sequences.hpp  TypeAlgorithms.hpp  TypeList.hpp  TypeTraits.hpp  Utilities.hpp
Source/sequoia/Core/Object/: Creator.hpp  DataPool.hpp  Factory.hpp  FaithfulWrapper.hpp  HandlerTraits.hpp  Handlers.hpp  Nomenclator.hpp  Suite.hpp  UniformWrapper.hpp
Source/sequoia/Core/ObjectHandling/: DataPool.hpp  DataPoolTraits.hpp  Factory.hpp  HandlerTraits.hpp  Handlers.hpp
Source/sequoia/Core/Ownership/: DataPool.hpp  DataPoolTraits.hpp  HandlerTraits.hpp  Handlers.hpp
Source/sequoia/Core/Utilities/: ArrayUtilities.hpp  AssignmentUtilities.hpp  Iterator.hpp  IteratorDetails.hpp  UniformWrapper.hpp
Source/sequoia/FileSystem/: FileSystem.hpp
Source/sequoia/Formatting/: Indent.cpp
Source/sequoia/Maths/Algebra/: Ratio.hpp
Source/sequoia/Maths/Geometry/: Angle.hpp  Spaces.hpp  VectorSpace.hpp
Source/sequoia/Maths/Graph/: Connectivity.hpp  DynamicGraph.hpp  DynamicGraphImpl.hpp  DynamicGraphTraversalDetails.hpp  DynamicGraphTraversals.hpp  DynamicTree.hpp  Edge.hpp  EdgesAndNodesUtilities.hpp  Graph.hpp  GraphAlgorithms.hpp  GraphDetails.hpp  GraphErrors.cpp  GraphErrors.hpp  GraphImpl.hpp  GraphPrimitive.hpp  GraphTraits.hpp  GraphTraversalDetails.hpp  GraphTraversalFunctions.hpp  GraphTraversals.hpp  HeterogeneousNodeDetails.hpp  HeterogeneousNodeStorage.hpp  HeterogeneousStaticGraph.hpp  NodeStorage.hpp  StaticGraph.hpp  StaticGraphImpl.hpp  (+5 more)
Source/sequoia/Parsing/: CommandLineArguments.cpp  CommandLineArguments.hpp
Source/sequoia/Physics/: PhysicalValues.hpp  PhysicalValuesDetails.hpp  Quantities.hpp  QuantitiesDetails.hpp
Source/sequoia/PlatformSpecific/: Helpers.cpp  Helpers.hpp  PlatformDiscriminators.hpp  Preprocessor.hpp
Source/sequoia/Runtime/: Factory.hpp  ShellCommands.cpp  ShellCommands.hpp
Source/sequoia/Streaming/: Streaming.cpp  Streaming.hpp
Source/sequoia/TestFramework/: Advice.cpp  Advice.hpp  AllocationCheckers.hpp  AllocationCheckersCore.cpp  AllocationCheckersCore.hpp  AllocationCheckersDetails.cpp  AllocationCheckersDetails.hpp  AllocationCheckersTraits.hpp  AllocationTestUtilities.hpp  BinaryRelationships.hpp  Commands.cpp  Commands.hpp  ConcreteTypeCheckers.cpp  ConcreteTypeCheckers.hpp  CoreInfrastructure.hpp  DependencyAnalyzer.cpp  DependencyAnalyzer.hpp  FailureInfo.cpp  FailureInfo.hpp  FileEditors.cpp  FileEditors.hpp  FileSystem.cpp  FileSystem.hpp  FileSystemUtilities.cpp  FileSystemUtilities.hpp  FreeCheckers.hpp  FreeTestCore.cpp  FreeTestCore.hpp  FuzzyTestCore.hpp  IndividualTestPaths.cpp  IndividualTestPaths.hpp  MaterialsUpdater.cpp  MaterialsUpdater.hpp  MoveOnlyAllocationCheckers.hpp  MoveOnlyAllocationCheckersDetails.hpp  MoveOnlyAllocationTestCore.hpp  MoveOnlyCheckers.hpp  MoveOnlyCheckersDetails.hpp  MoveOnlyTestCore.cpp  MoveOnlyTestCore.hpp  (+39 more)
Source/sequoia/TextProcessing/: Indent.cpp  Indent.hpp  Patterns.cpp  Patterns.hpp  Substitutions.cpp  Substitutions.hpp
TestAll/: CMakeLists.txt  CMakePresets.json  TestMain.cpp  makefile
TestChamber/: CMakeLists.txt  CMakePresets.json  TestChamberMain.cpp  makefile
TestFrameworkDiagnostics/: CMakeLists.txt  TestFrameworkDiagnosticsMain.cpp  makefile
TestFrameworkHarness/: CMakeLists.txt  TestFrameworkHarnessMain.cpp
TestMinimal/: CMakeLists.txt  TestMinimalMain.cpp  makefile
aux_files/ProjectTemplate/TestAll/: CMakeLists.txt  TestMain.cpp  makefile
build_system/TestFramework/: CMakeLists.txt
(+14089 files in other folders)
